# congressTweets

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
congresstweets/: locs.py  utils.py
congresstweets/model/: pipeline.py
congresstweets/twitter/: __init__.py  api.py  df.py  fake_tweets.py  handles.py  tweets.py
data/tweets/: index.html
docs/: README.md  index.md
docs/model/: preliminary_pipeline.md
ideoquant/: config.py
ideoquant/twitter/: api.py
model/preliminary_pipeline/: index.html
scripts/explore/: aggregate_tweets.py  nlp.py  sandbox.py
scripts/notebooks/: latent_dirichlet_allocation.py  naive_bayes.py  pipeline.py  sandbox.py
scripts/pull_data/: congress_handles.py  congress_tweets.py
scripts/search/: by_keywords.py  streamlit.py
scripts/twitter/: congress_handles.py  download_tweets.py
search/: search_index.json
tests/twitter/: test_twitterapi.py
