[tool.poetry]
name = "congresstweets"
version = "0.1.0"
description = ""
authors = ["Chansoo Song"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
mkdocs = "^1.4.2"
mkdocs-material = ">=8.0.0,<9.0.0"
mkdocs-simple-blog = "^0.0.5"
mkdocstrings = "^0.20.0"
mkdocs-jupyter = "^0.22.0"
pymdown-extensions = "^9.9.2"
pyaml = "^23.5.9"
ipykernel = "^6.23.1"
selenium = "^4.9.1"
pandas = "^2.0.1"
gensim = "^4.3.1"
nltk = "^3.8.1"
streamlit = "^1.23.1"
tabulate = "^0.9.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"